crates/es-fluent-core/tests/snapshots/enum_kv_tests__enum_kv_analysis_no_keys_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/enum_kv_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "CountryKvFtl",
    variants: [
      FtlVariant(
        name: "USA",
        ftl_key: FluentKey("country_kv_ftl-USA"),
        args: [],
      ),
      FtlVariant(
        name: "Canada",
        ftl_key: FluentKey("country_kv_ftl-Canada"),
        args: [],
      ),
    ],
    file_path: None,
  ),
]
