crates/es-fluent-core/tests/snapshots/enum_kv_tests__enum_kv_analysis_with_keys_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/enum_kv_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "CountryLabelKvFtl",
    variants: [
      FtlVariant(
        name: "USA",
        ftl_key: FluentKey("country_label_kv_ftl-USA"),
        args: [],
      ),
      FtlVariant(
        name: "Canada",
        ftl_key: FluentKey("country_label_kv_ftl-Canada"),
        args: [],
      ),
      FtlVariant(
        name: "Mexico",
        ftl_key: FluentKey("country_label_kv_ftl-Mexico"),
        args: [],
      ),
    ],
    file_path: None,
  ),
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "CountryDescriptionKvFtl",
    variants: [
      FtlVariant(
        name: "USA",
        ftl_key: FluentKey("country_description_kv_ftl-USA"),
        args: [],
      ),
      FtlVariant(
        name: "Canada",
        ftl_key: FluentKey("country_description_kv_ftl-Canada"),
        args: [],
      ),
      FtlVariant(
        name: "Mexico",
        ftl_key: FluentKey("country_description_kv_ftl-Mexico"),
        args: [],
      ),
    ],
    file_path: None,
  ),
]
