crates/es-fluent-core/tests/snapshots/enum_kv_tests__enum_kv_analysis_with_keys_this_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/enum_kv_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "CountryLabelKvFtl",
    variants: [
      FtlVariant(
        name: "CountryLabelKvFtl",
        ftl_key: FluentKey("country_label_kv_ftl_this"),
        args: [],
      ),
      FtlVariant(
        name: "USA",
        ftl_key: FluentKey("country_label_kv_ftl-USA"),
        args: [],
      ),
      FtlVariant(
        name: "Canada",
        ftl_key: FluentKey("country_label_kv_ftl-Canada"),
        args: [],
      ),
    ],
  ),
]
